--- a/Task1/index.html
+++ b/Task1/index.html
@@ -1071,7 +1071,7 @@
                 </div>
     </div>
     <div class="col-md-2 col-sm-6 my-12 mx-auto p-relative bg-white shadow-1 blue-hover mycard mycard" style="width: 360px; overflow: hidden; border-radius: 1px;">
-        <img src="./img/animeshmishra.jpg" class="pic w-full">
+        <img src="./img/cheersanimesh.jpg" class="pic w-full">
             <div class="card-body">
                     <h5 class="card-title text-center">Animesh Mishra</h5>
                     <div class="text-center">
